# zombiotrack

./: .coveragerc  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
tests/: conftest.py  test_zombie_simulation.py
zombiotrack/: __main__.py  pyproject.toml
zombiotrack/interfaces/: constants.py
zombiotrack/interfaces/cli/: _cli.py  config.py  control.py  interactive.py  visualization.py
zombiotrack/interfaces/cli/utils/: data_management.py
zombiotrack/models/: building.py  floor.py  room.py  sensor.py  state.py
zombiotrack/use_cases/: constants.py  zombie_simulation.py
