[project]
name = "zombiotrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FarDust", email = "gnfaundez@uc.cl" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
zombiotrack = "zombiotrack:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
